<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:orderInCategory="101"
        android:icon="@drawable/ic_inicio"
        android:title="@string/nav_menu_inicio"/>
    <item android:id="@+id/nav_buscar"
        android:title="@string/nav_menu_buscar"
        android:icon="@drawable/ic_buscar"
        android:orderInCategory="102"
        />
    <item android:title="@string/nav_menu_comprar"
        android:orderInCategory="103"
        android:icon="@drawable/ic_car"
        android:id="@+id/nav_comprar"/>

    <item android:title="@string/nav_menu_inicia"
        android:orderInCategory="104"
        android:icon="@drawable/ic_login"
        android:id="@+id/nav_inicia"/>



</menu>